# secure_hasher

./: package-lock.json
backend/: CMakeLists.txt  crypto_logic.hpp  main.cpp  server  server.cpp  utils.hpp
frontend/: index.html  package-lock.json  package.json
frontend/secure-hasher/: vite.config.ts
frontend/secure-hasher/src/: App.tsx  index.css
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ResultBox.tsx
frontend/src/components/EntropyGuardian/: EntropyGuardian.tsx
frontend/src/components/EntropyGuardian/AttackSimulation/: BruteForceSimulator.tsx
frontend/src/components/EntropyGuardian/EntropyAnalysis/: EntropyAnalysis.tsx
frontend/src/components/Generator/: Generator.tsx
frontend/src/components/Hasher/: Hasher.css  Hasher.tsx
frontend/src/components/common/: ResultBox.tsx
